--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  height: 100%;
 }
 
 * {
@@ -36,7 +37,7 @@ ul {
 }
 
 body {
-  min-height: 100vh;
+  height: 100%;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -85,4 +86,5 @@ textarea:not([rows]) {
 
 #root {
   isolation: isolate;
+  height: 100%;
 }
