--- a/frontend/src/components/StagingArea/StagingArea.module.css
+++ b/frontend/src/components/StagingArea/StagingArea.module.css
@@ -32,7 +32,14 @@
 .smallCard {
   border: 1px solid white;
   border-radius: var(--border-radius);
-  padding: 15px;
+  padding: 15px 25px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.smallCardAnswer {
+  margin-right: auto;
 }
 
 .deckInfo {
