--- a/frontend/src/components/McqKidsCardOption/McqKidsCardOption.module.css
+++ b/frontend/src/components/McqKidsCardOption/McqKidsCardOption.module.css
@@ -1,5 +1,7 @@
 .wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
   align-items: center;
+  padding: 15px;
+  gap: 15px;
 }
