--- a/frontend/src/pages/SignUpPage/SignUpPage.module.css
+++ b/frontend/src/pages/SignUpPage/SignUpPage.module.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --title: #000;
   --body: #1a1a1a;
   --bg: #fff;
@@ -188,4 +188,53 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+} */
+
+.formSubmitButton {
+  color: var(--white);
+  background: var(--button-bg-color);
+  border: 1px solid var(--light-variation);
+  border-radius: var(--border-radius-2);
+  appearance: none;
+  vertical-align: middle;
+  font-size: 1rem;
+  text-align: center;
+  margin: 0;
+  outline: none;
+  padding: 14px 10px;
+  text-decoration: none;
+  width: 100%;
+  margin-top: var(--spacing-2);
+
+  &:active {
+    box-shadow: inset 0 1px 2px rgb(0 0 0 / 0.1);
+    background: hsl(230, 58%, 22%);
+    border-color: hsl(230, 58%, 72%);
+  }
+
+  &:focus-visible {
+    outline: 2px solid var(--focus-ring-color);
+    outline-offset: -1px;
+  }
+}
+.formWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-3);
+}
+.formControl {
+  display: flex;
+  flex-direction: column;
+  & label {
+    align-self: start;
+    font-weight: var(--font-weight-2);
+  }
+  & input {
+    border-radius: var(--input-border-radius);
+    border-color: var(--input-border-color);
+    border-width: 1.5px;
+    padding: 6px 10px;
+    font-size: 0.9rem;
+  }
+  gap: var(--spacing-2);
 }
