feat: improve nav and various styles

--- a/frontend/src/components/HomeContent/HomeContent.module.css
+++ b/frontend/src/components/HomeContent/HomeContent.module.css
@@ -1,12 +1,17 @@
 .homeContentWrapper {
-  display: flex;
+  display: grid;
+  grid-template-rows: auto auto;
   gap: var(--spacing-6);
-  flex-direction: column;
 }
+
 .homeContentSession {
   display: flex;
   gap: var(--spacing-3);
   flex-direction: column;
+  width: 100%;
+  /* overflow: auto; */
+  min-width: 0;
+  border: 1px solid red; /* TODO */
 }
 
 .container {
