--- a/frontend/src/components/CustomButton/CustomButton.module.css
+++ b/frontend/src/components/CustomButton/CustomButton.module.css
@@ -1,46 +1,26 @@
-.actions {
-  display: flex;
-  flex-direction: column;
-  margin-top: var(--spacing-1);
-}
-
-.summaryInfo {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin-top: var(--spacing-5);
-}
-.summaryHeader {
-  text-align: left;
-}
-.subHeader {
-  font-weight: var(--font-weight-1);
-  color: var(--dark-variation);
-  margin-bottom: -45px;
-}
-
-.summaryBtn {
+.button {
   color: var(--white);
   background: var(--button-bg-color);
   border: 1px solid var(--light-variation);
-  border-radius: 4px;
+  border-radius: var(--border-radius-2);
   appearance: none;
   vertical-align: middle;
   font-size: 1rem;
   text-align: center;
   margin: 0;
   outline: none;
-  padding: 6px 10px;
+  padding: 14px 10px;
   text-decoration: none;
   width: 100%;
+  margin-top: var(--spacing-2);
 
-  &[data-pressed] {
+  &:active {
     box-shadow: inset 0 1px 2px rgb(0 0 0 / 0.1);
     background: hsl(230, 58%, 22%);
     border-color: hsl(230, 58%, 72%);
   }
 
-  &[data-focus-visible] {
+  &:focus-visible {
     outline: 2px solid var(--focus-ring-color);
     outline-offset: -1px;
   }
