--- a/frontend/src/components/FlashCardProgressBar/FlashCardProgressBar.module.css
+++ b/frontend/src/components/FlashCardProgressBar/FlashCardProgressBar.module.css
@@ -5,7 +5,7 @@
   gap: 4px;
 
   --text-color: white;
-  --highlight-background: var(--primary-color);
+  --highlight-background: var(--medium-variation);
   --border-color: var(--light-variation);
   color: var(--text-color);
 
