--- a/frontend/src/components/CustomButton/CustomButton.module.css
+++ b/frontend/src/components/CustomButton/CustomButton.module.css
@@ -13,9 +13,10 @@
   text-decoration: none;
   width: 100%;
   margin-top: var(--spacing-2);
+  cursor: pointer;
 
   &:active {
-    box-shadow: inset 0 1px 2px rgb(0 0 0 / 0.1);
+    box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
     background: hsl(230, 58%, 22%);
     border-color: hsl(230, 58%, 72%);
   }
@@ -24,4 +25,18 @@
     outline: 2px solid var(--focus-ring-color);
     outline-offset: -1px;
   }
+
+  &:hover {
+    transform: translateY(-1px);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  }
+}
+
+.secondary {
+  background-color: var(--light-variation);
+  color: var(--darkest-variation);
+  border: 1px solid var(----lightest-variation-variation);
+}
+.warning {
+  background-color: var(--bright-warning-variation);
 }
