chore: update styles

--- a/frontend/src/components/HomeContent/HomeContent.module.css
+++ b/frontend/src/components/HomeContent/HomeContent.module.css
@@ -11,7 +11,7 @@
   width: 100%;
   /* overflow: auto; */
   min-width: 0;
-  border: 1px solid red; /* TODO */
+  /* border: 1px solid red; TODO */
 }
 
 .container {
