--- a/frontend/src/components/FormContainer/FormContainer.module.css
+++ b/frontend/src/components/FormContainer/FormContainer.module.css
@@ -1,10 +1,11 @@
 .formContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-5);
+  /* gap: var(--spacing-5); */
 }
 
 .formHeader {
   margin-top: var(--spacing-5);
   text-align: left;
+  margin-bottom: var(--spacing-5);
 }
