feat: update styles

--- a/frontend/src/components/CustomButton/CustomButton.module.css
+++ b/frontend/src/components/CustomButton/CustomButton.module.css
@@ -40,3 +40,11 @@
 .warning {
   background-color: var(--bright-warning-variation);
 }
+
+@media (min-width: 1024px) {
+  .button {
+    max-width: 460px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+}
