--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -142,3 +142,12 @@ body,
 body {
   padding: 20px;
 }
+
+@media (min-width: 1024px) {
+  body,
+  #root {
+    max-width: 860px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+}
