--- a/frontend/src/components/Dashboard/Dashboard.module.css
+++ b/frontend/src/components/Dashboard/Dashboard.module.css
@@ -2,15 +2,23 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-
   height: 100%;
+  overflow: hidden;
 }
 
 .dashboardListWrapper {
-  height: 100%;
+  /* height: 100%; */
+  flex: 1;
   display: flex;
-  gap: var(--spacing-4);
+  gap: var(--spacing-3);
   flex-direction: column;
+  overflow: auto;
+  min-height: 0px;
+}
+
+.dashboardBox {
+  /* display: flex; */
+  display: flex;
 }
 
 .dashboardItemWrapper {
