style: style landing page;

--- a/frontend/src/pages/LandingPage/LandingPage.module.css
+++ b/frontend/src/pages/LandingPage/LandingPage.module.css
@@ -41,10 +41,12 @@
 }
 
 .welcomeHeader {
-  margin-top: var(--spacing-2);
+  margin-top: 0px;
 }
 
 .welcomeMsg {
-  margin-top: var(--spacing-3);
-  margin-bottom: var(--spacing-5);
+  margin-top: var(--spacing-5);
+  margin-bottom: var(--spacing-6);
+  width: 30ch;
+  align-self: center;
 }
